updated README file

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 Quick Google Map thing for the Twitter hashtag #notaloneatxmas
 
 With thanks and apologies to the Guardian's #uksnow code and this StackOverflow page: http://stackoverflow.com/questions/2638725/adding-multiple-pins-to-google-maps-by-uk-post-code
+
+(Thrown together in a half-asleep hurry on Christmas Eve, please forgive if it's a bit shonky)
